--- a/package.json
+++ b/package.json
@@ -16,15 +16,13 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3",
-    "react-scripts": "^5.0.1",
-    "typescript": "^4.8.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "vite",
+    "build": "tsc -b && vite build",
+    "lint": "eslint .",
+    "preview": "vite preview"
   },
   "eslintConfig": {
     "extends": [
@@ -45,8 +43,19 @@
     ]
   },
   "devDependencies": {
+    "@eslint/js": "^9.11.1",
     "@tanstack/eslint-plugin-query": "^5.59.7",
+    "@types/react": "^18.3.10",
+    "@types/react-dom": "^18.3.0",
     "@types/lodash": "^4.17.10",
-    "tailwindcss": "^3.4.13"
+    "@vitejs/plugin-react": "^4.3.2",
+    "tailwindcss": "^3.4.13",
+    "vite": "^5.4.9",
+    "eslint": "^9.11.1",
+    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
+    "eslint-plugin-react-refresh": "^0.4.12",
+    "globals": "^15.9.0",
+    "typescript": "^5.5.3",
+    "typescript-eslint": "^8.7.0"
   }
 }
