--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@tanstack/react-query": "^5.59.15",
+    "@tanstack/react-query-devtools": "^5.59.15",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -45,17 +46,17 @@
   "devDependencies": {
     "@eslint/js": "^9.11.1",
     "@tanstack/eslint-plugin-query": "^5.59.7",
+    "@types/lodash": "^4.17.10",
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
-    "@types/lodash": "^4.17.10",
     "@vitejs/plugin-react": "^4.3.2",
-    "tailwindcss": "^3.4.13",
-    "vite": "^5.4.9",
     "eslint": "^9.11.1",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.12",
     "globals": "^15.9.0",
+    "tailwindcss": "^3.4.13",
     "typescript": "^5.5.3",
-    "typescript-eslint": "^8.7.0"
+    "typescript-eslint": "^8.7.0",
+    "vite": "^5.4.9"
   }
 }
