--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     ]
   },
   "devDependencies": {
-    "@eslint/js": "^9.11.1",
+    "@eslint/js": "^9.13.0",
     "@tanstack/eslint-plugin-query": "^5.59.7",
     "@types/lodash": "^4.17.10",
     "@types/react": "^18.3.10",
@@ -52,13 +52,13 @@
     "@vitejs/plugin-react": "^4.3.2",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.11.1",
-    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
+    "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.12",
     "globals": "^15.9.0",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.13",
     "typescript": "^5.5.3",
-    "typescript-eslint": "^8.7.0",
+    "typescript-eslint": "^8.10.0",
     "vite": "^5.4.9"
   }
 }
