eslint js and ts stylistic rules added with code style fixes;

--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
+    "@stylistic/eslint-plugin-js": "^2.9.0",
+    "@stylistic/eslint-plugin-ts": "^2.9.0",
     "@tanstack/eslint-plugin-query": "^5.59.7",
     "@types/lodash": "^4.17.10",
     "@types/react": "^18.3.10",
